# srsRAN_4G

./: .clang-format  .clang-tidy  .ctxt  .gdbinit  .gitignore  .lgtm.yml  .travis.yml  BUILD_STATUS.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  CTestCustom.cmake.in  Dockerfile.example  ISSUE_TEMPLATE.md  README.md  README_New.md  Raspbian-64bit-README.md  build_srsran.sh  build_trial.sh  changelog_team13.md  get_dep_packages_fedora.sh  install-srsepc.sh  install_deps.sh  maker.sh  mmc_config.patch  run-clang-format-diff.sh  setup
common/: CMakeLists.txt
common/include/liblte/: error.h
common/include/srslte/: config.h
cuhd/: CMakeLists.txt
cuhd/include/: CMakeLists.txt  cuhd.h
cuhd/include/cuhd/: cuhd_utils.h
cuhd/lib/: CMakeLists.txt  cuhd_handler.hpp  cuhd_imp.cpp  cuhd_utils.c  radio_uhd.cc
examples/: CMakeLists.txt  bch_test.c  cell_search.c  enodeb_bch.c  equalizer_test.c  hl_example.c  ll_example.c  mib_scan_usrp.c  mib_test.c  mib_track.c  pbch_enodeb.c  pbch_ue.c  pdsch_enodeb.c  pss_scan_usrp.c  rssi_scan_usrp.c  scan_mib.c  scan_pss.c  scan_rssi.c  synch_file.c  synch_test.c  viterbi_test.c
examples/cmake/Modules/: FindFFTWS.cmake
fauxsrsenb/src/: CMakeLists.txt  enb_cfg_parser.cc  main.cc  metrics_stdout.cc
fauxsrsenb/src/mac/: CMakeLists.txt  mac.cc  scheduler.cc  scheduler_harq.cc  scheduler_metric.cc  scheduler_ue.cc  ue.cc
fauxsrsenb/src/phy/: CMakeLists.txt  phch_common.cc  phch_worker.cc  phy.cc  prach_worker.cc  txrx.cc
fauxsrsenb/src/upper/: CMakeLists.txt  gtpu.cc  pdcp.cc  rlc.cc  rrc.cc  s1ap.cc
graphics/lib/: CMakeLists.txt
graphics/lib/common/: Events.cpp  Events.h  Lineplot.cpp  Lineplot.h  Pointplot.cpp  Pointplot.h  Spectrogramplot.cpp  Spectrogramplot.h  WaterfallData.h  plot.cpp
graphics/lib/complexplot/: ComplexWidget.cpp  ComplexWidget.h  Complexplot.cpp  Complexplot.h  ComplexplotWrapper.cpp  ComplexplotWrapper.h  plot_complex.cpp
graphics/lib/realplot/: RealWidget.cpp  RealWidget.h  Realplot.cpp  Realplot.h  RealplotWrapper.cpp  RealplotWrapper.h  plot_real.cpp
graphics/lib/scatterplot/: ScatterWidget.cpp  ScatterWidget.h  Scatterplot.cpp  Scatterplot.h  ScatterplotWrapper.cpp  ScatterplotWrapper.h  plot_scatter.cpp
graphics/lib/waterfallplot/: WaterfallWidget.cpp  WaterfallWidget.h  Waterfallplot.cpp  Waterfallplot.h  WaterfallplotWrapper.cpp  WaterfallplotWrapper.h  plot_waterfall.cpp
lib/: CMakeLists.txt
lib/ch_estimation/src/: chest.c  refsignal.c
lib/channel/src/: ch_awgn.c  gauss.c  gauss.h
lib/examples/: CMakeLists.txt  cell_measurement.c  cell_measurement.cc  cell_search.c  cell_search_nbiot.c  npdsch_enodeb.c  npdsch_ue.c  npdsch_ue_helper.cc  npdsch_ue_helper.h  pdsch_enodeb.c  pdsch_ue.c  pssch_ue.c  synch_file.c  usrp_capture.c  usrp_capture_sync.c  usrp_capture_sync_nbiot.c  usrp_txrx.c  zmq_remote_rx.c
lib/examples/test/: CMakeLists.txt  iqtests.cmake
lib/examples/tutorial_examples/: CMakeLists.txt  simple_tx.c
lib/fec/src/: convcoder.c  crc.c  parity.h  viterbi.c  viterbi37.h  viterbi37_port.c
lib/filter/src/: filter2d.c
lib/include/: CMakeLists.txt
lib/include/srslte/: CMakeLists.txt  build_info.h.in  config.h  srslte.h  version.h.in
lib/include/srsran/: CMakeLists.txt  build_info.h.in  config.h  srsran.h  version.h.in
lib/io/src/: binsource.c  filesink.c  filesource.c
lib/lte/src/: fft.c  lte.c  phch_sequence.c  sequence.c
lib/modem/src/: demod_hard.c  demod_soft.c  hard_demod_lte.c  hard_demod_lte.h  lte_tables.c  lte_tables.h  mod.c  modem_table.c  soft_algs.c  soft_algs.h
lib/phch/src/: common.c  common.h  pbch.c
lib/ratematching/src/: rm_conv.c
lib/resampling/src/: interp.c
lib/scrambling/src/: scrambling.c
lib/src/: CMakeLists.txt
lib/src/asn1/: CMakeLists.txt  asn1_utils.cc  e2ap.cpp  e2sm.cpp  e2sm_kpm.cpp  e2sm_kpm_v2.cpp  gtpc.cc  liblte_common.cc  (+23 more)
lib/test/: CMakeLists.txt
lte/examples/: CMakeLists.txt  cell_measurement.c  cell_search.c  cell_search_utils.c  cell_search_utils.h  cuhd_utils.c  cuhd_utils.h  hl_example.c  iodev.c  iodev.h  ll_example.c  pdsch_enodeb.c  pdsch_ue.c  prach_ue.c  synch_file.c
lte/lib/: CMakeLists.txt
mex/: CMakeLists.txt
mex/lib/: CMakeLists.txt  mexutils.c
srsapps/radio/: CMakeLists.txt
srsenb/: CMakeLists.txt  drb.conf.example  enb.conf.example  enb.conf.fauxrf.example  rb.conf.example  rr.conf.example  sib.conf.example  sib.conf.mbsfn.example
srsenb/hdr/: cfg_parser.h  enb.h  metrics_csv.h  metrics_e2.h  metrics_json.h  metrics_stdout.h  parser.h  x2_adapter.h
srsenb/src/: CMakeLists.txt  enb.cc  enb_cfg_parser.cc  enb_cfg_parser.h  main.cc  metrics_csv.cc  metrics_e2.cc  metrics_json.cc  metrics_stdout.cc  parser.cc
srsenb/test/: CMakeLists.txt  enb_metrics_test.cc
srsepc/: CMakeLists.txt  epc.conf.example  if_masq.sh  mbms.conf.example  srsepc_if_masq.sh  user_db.csv  user_db.csv.example
srsepc/conf/: epc.conf
srsepc/docs/: Makefile  README
srsepc/hdr/: CMakeLists.txt
srsepc/src/: CMakeLists.txt  main.cc
srslte/: CMakeLists.txt
srslte/examples/: CMakeLists.txt  cell_measurement.c  cell_search.c  cuhd_utils.c  cuhd_utils.h  hl_example.c  ll_example.c  pdsch_enodeb.c  pdsch_ue.c  prach_ue.c  synch_file.c  usrp_capture.c  usrp_capture_sync.c  usrp_txrx.c
srslte/include/: CMakeLists.txt
srslte/itf/: CMakeLists.txt  queue.cc  queue.h  ue_phy.cc  ue_phy.h
srslte/lib/: CMakeLists.txt  bak.cmake
srslte/tutorial_examples/: CMakeLists.txt  pss.c  simple_tx.c  ue_rx.c
srsue/: CHANGELOG  CMakeLists.txt  COPYRIGHT  README.md  ue.conf.example  ue.conf.fauxrf.example
srsue/hdr/: metrics_csv.h  metrics_json.h  metrics_stdout.h  ue.h  ue_base.h  ue_metrics_interface.h  ue_stack_interface.h
srsue/src/: CMakeLists.txt  main.cc  metrics_csv.cc  metrics_json.cc  metrics_stdout.cc  set_net_admin_caps.cc  ue.cc  ue_base.cc
srsue/test/: CMakeLists.txt  mac_test.cc  metrics_test.cc
test/phy/: CMakeLists.txt  dummy_gnb_stack.h  dummy_phy_common.h  dummy_rx_harq_proc.h  dummy_tx_harq_proc.h  dummy_ue_phy.h  dummy_ue_stack.h  nr_dl_flood.cc  nr_phy_test.cc  test_bench.h
(+5849 files in other folders)
